crates/ars-components/src/data_display/table/snapshots/ars_components__data_display__table__tests__table_head_sticky.snap
---
source: crates/ars-components/src/data_display/table/tests.rs
expression: snapshot_attrs(&head)
---
AttrMap {
    attrs: [
        (
            Data(
                "ars-part",
            ),
            String(
                "head",
            ),
        ),
        (
            Data(
                "ars-scope",
            ),
            String(
                "table",
            ),
        ),
        (
            Data(
                "ars-sticky",
            ),
            Bool(
                true,
            ),
        ),
    ],
    styles: [],
}
