crates/ars-components/src/data_display/table/snapshots/ars_components__data_display__table__tests__table_root_sticky_header.snap
---
source: crates/ars-components/src/data_display/table/tests.rs
expression: snapshot_attrs(&root)
---
AttrMap {
    attrs: [
        (
            Data(
                "ars-part",
            ),
            String(
                "root",
            ),
        ),
        (
            Data(
                "ars-scope",
            ),
            String(
                "table",
            ),
        ),
        (
            Data(
                "ars-sticky-header",
            ),
            Bool(
                true,
            ),
        ),
    ],
    styles: [],
}
